# local-snippet-manager

./: Cargo.toml  README.md  lsm.json
src/: cli.yaml  display.rs  main.rs
