[package]
name = "lsm"
version = "0.1.0"
authors = ["Robert Fuchs <robertfuchs97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.11"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
clap = {git = "https://github.com/clap-rs/clap", features = ["yaml"]}
